# cuda-gemm-optimization

./: CMakeLists.txt  README.md
docs/: optimization_notes.md
include/: gemm.h
results/: benchmark.md
scripts/: run_bench.sh
src/: gemm_naive.cu  gemm_tiled.cu  gemm_utils.cu  main.cu
tests/: test_correctness.cu
